src/objects/OrderApi__Connection_Type__c.object
<CustomObject>
    <description>Connection Types allow you to customize the different types of Connections that can be created in the database.</description>
    <fields>
        <fullName>OrderApi__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Only active Connection Types can be used to create new Connections.</description>
        <inlineHelpText>Only active Connection Types can be used to create new Connections.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Allow_Accounts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, this Relationship Type can be associated with Accounts.</description>
        <inlineHelpText>When checked, this Relationship Type can be associated with Accounts.</inlineHelpText>
        <label>Allow Accounts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Allow_Contacts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, this Relationship Type can be associated with Contacts.</description>
        <inlineHelpText>When checked, this Relationship Type can be associated with Contacts.</inlineHelpText>
        <label>Allow Contacts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Category__c</fullName>
        <description>**Required** Select the most appropriate category for the Relationship Type.</description>
        <inlineHelpText>**Required** Select the most appropriate category for the Relationship Type.</inlineHelpText>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Affiliate</fullName>
                </value>
                <value>
                    <fullName>Colleague</fullName>
                </value>
                <value>
                    <fullName>Employment</fullName>
                </value>
                <value>
                    <fullName>Family</fullName>
                </value>
                <value>
                    <fullName>Spousal</fullName>
                </value>
                <value>
                    <fullName>Religious</fullName>
                </value>
                <value>
                    <fullName>Alumni</fullName>
                </value>
                <value>
                    <fullName>Volunteer</fullName>
                </value>
                <value>
                    <fullName>Member</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderApi__Mapped_Connections__c</fullName>
        <description>**System Calculated** Count of Mapped Connection Types.</description>
        <inlineHelpText>**System Calculated** Count of Mapped Connection Types.</inlineHelpText>
        <label>Mapped Connections</label>
        <summaryForeignKey>OrderApi__Connection_Type_Mapping__c.OrderApi__Connection_Type__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Connection Type</label>
    <listViews>
        <fullName>OrderApi__All</fullName>
        <columns>NAME</columns>
        <columns>OrderApi__Allow_Accounts__c</columns>
        <columns>OrderApi__Allow_Contacts__c</columns>
        <columns>OrderApi__Category__c</columns>
        <columns>OrderApi__Mapped_Connections__c</columns>
        <columns>OrderApi__Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Label</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Connection Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>